@@ -20,28 +20,27 @@ package EBox::Samba::Provision;
 
 use EBox::Exceptions::External;
 use EBox::Exceptions::Internal;
-use EBox::Exceptions::InvalidType;
 use EBox::Exceptions::InvalidArgument;
+use EBox::Exceptions::InvalidType;
 use EBox::Exceptions::MissingArgument;
-use EBox::Validate qw(:all);
 use EBox::Gettext;
 use EBox::Global;
-
-use EBox::Users::User;
 use EBox::Users::Group;
-
 use EBox::Users::NamingContext;
+use EBox::Users::User;
 use EBox::Samba::NamingContext;
+use EBox::Validate qw(:all);
 
-use Net::DNS;
-use Net::NTP qw(get_ntp_response);
-use Net::Ping;
-use Net::LDAP;
-use Net::LDAP::Util qw(ldap_explode_dn canonical_dn);
+use Error qw(:try);
+use Encode qw(decode_utf8);
 use File::Temp qw( tempfile tempdir );
 use File::Slurp;
+use Net::DNS;
+use Net::LDAP;
+use Net::LDAP::Util qw(ldap_explode_dn canonical_dn);
+use Net::NTP qw(get_ntp_response);
+use Net::Ping;
 use Time::HiRes;
-use Error qw(:try);
 
 sub new
 {
@@ -682,7 +681,7 @@ sub getADDomain
 
     my $adLdap = new Net::LDAP($adServerIp);
     my $rootDse = $adLdap->root_dse(attrs => $self->rootDseAttributes());
-    my $defaultNC = $rootDse->get_value('defaultNamingContext');
+    my $defaultNC = decode_utf8($rootDse->get_value('defaultNamingContext'));
 
     my $adDomain = $defaultNC;
     $adDomain =~ s/DC=//g;
@@ -705,7 +704,7 @@ sub getADRealm
 
     my $adLdap = new Net::LDAP($adServerIp);
     my $rootDse = $adLdap->root_dse(attrs => $self->rootDseAttributes());
-    my $ldapPrinc = $rootDse->get_value('ldapServiceName');
+    my $ldapPrinc = decode_utf8($rootDse->get_value('ldapServiceName'));
     my (undef, $adRealm) = split(/@/, $ldapPrinc);
 
     unless (defined $adRealm) {
@@ -763,7 +762,7 @@ sub checkDnsZonesInMainPartition
     EBox::info("Checking for old DNS zones stored in main domain partition...");
     my $adLdap = $self->bindToADLdap($adServerIp, $adUser, $adPwd);
     my $rootDse = $adLdap->root_dse(attrs => $self->rootDseAttributes());
-    my $defaultNC = $rootDse->get_value('defaultNamingContext');
+    my $defaultNC = decode_utf8($rootDse->get_value('defaultNamingContext'));
 
     my $ldapMsg = $adLdap->search(base => "CN=MicrosoftDNS,CN=System,$defaultNC",
                                   scope => 'sub',
@@ -771,7 +770,7 @@ sub checkDnsZonesInMainPartition
                                   attrs => ['name']);
     my @zoneNames;
     foreach my $entry ($ldapMsg->entries) {
-        my $zoneName = $entry->get_value('name');
+        my $zoneName = decode_utf8($entry->get_value('name'));
         next if (lc ($zoneName) eq lc ('RootDNSServers') or
                  lc ($zoneName) eq lc ('..TrustAnchors'));
         push (@zoneNames, $zoneName);
@@ -810,7 +809,7 @@ sub checkForestDomains
     EBox::info("Checking number of domains inside forest...");
     my $adLdap = $self->bindToADLdap($adServerIp, $adUser, $adPwd);
     my $rootDse = $adLdap->root_dse(attrs => $self->rootDseAttributes());
-    my $configurationNC = $rootDse->get_value('configurationNamingContext');
+    my $configurationNC = decode_utf8($rootDse->get_value('configurationNamingContext'));
 
     my $result = $adLdap->search(base => "CN=Partitions,$configurationNC",
                                scope => 'sub',
@@ -982,7 +981,7 @@ sub checkTrustDomainObjects
     EBox::info("Checking for domain trust relationships...");
     my $adLdap = $self->bindToADLdap($adServerIp, $adUser, $adPwd);
     my $rootDse = $adLdap->root_dse(attrs => $self->rootDseAttributes());
-    my $defaultNC = $rootDse->get_value('defaultNamingContext');
+    my $defaultNC = decode_utf8($rootDse->get_value('defaultNamingContext'));
 
     my $ldapMsg = $adLdap->search(base => "CN=System,$defaultNC",
                                   scope => 'sub',
@@ -1061,13 +1060,13 @@ sub checkADServerSite
     if (defined $site and length $site) {
         # If the user has specified a site, check it exists
         EBox::info("Checking if the specified site $site exists in the domain");
-        my $configurationNC = $rootDse->get_value('configurationNamingContext');
+        my $configurationNC = decode_utf8($rootDse->get_value('configurationNamingContext'));
         my $ldapMsg = $adLdap->search(base => "CN=Sites,$configurationNC",
                                       scope => 'sub',
                                       filter => '(objectClass=site)',
                                       attrs => ['name']);
         foreach my $entry ($ldapMsg->entries()) {
-            my $name = $entry->get_value('name');
+            my $name = decode_utf8($entry->get_value('name'));
             if (lc ($name) eq lc ($site)) {
                 $adServerSite = $name;
                 last;
@@ -1082,7 +1081,7 @@ sub checkADServerSite
     } else {
         # Search the site of the given server
         EBox::info("Checking the site where the specified server is located");
-        my $serverNameDn = $rootDse->get_value('serverName');
+        my $serverNameDn = decode_utf8($rootDse->get_value('serverName'));
         my $dnParts = ldap_explode_dn($serverNameDn, reverse => 0);
         $adServerSite = @{$dnParts}[2]->{CN};
         unless (defined $adServerSite) {
@@ -1109,7 +1108,7 @@ sub checkADNebiosName
     EBox::info("Checking domain netbios name...");
     my $adLdap = $self->bindToADLdap($adServerIp, $adUser, $adPwd);
     my $rootDse = $adLdap->root_dse(attrs => $self->rootDseAttributes());
-    my $configurationNC = $rootDse->get_value('configurationNamingContext');
+    my $configurationNC = decode_utf8($rootDse->get_value('configurationNamingContext'));
     my $result = $adLdap->search(base => "CN=Partitions,$configurationNC",
                                  scope => 'sub',
                                  filter => '(nETBIOSName=*)',
@@ -1117,7 +1116,7 @@ sub checkADNebiosName
     my $adNetbiosDomain = undef;
     if ($result->count() == 1) {
         my $entry = $result->entry(0);
-        $adNetbiosDomain = $entry->get_value('nETBIOSName');
+        $adNetbiosDomain = decode_utf8($entry->get_value('nETBIOSName'));
     }
     unless (defined $adNetbiosDomain) {
         throw EBox::Exceptions::External(
@@ -1140,7 +1139,7 @@ sub _addForestDnsZonesReplica
     my $sambaModule = EBox::Global->modInstance('samba');
     my $ldb = $sambaModule->ldb();
     my $basedn = $ldb->dn();
-    my $dsServiceName = $ldb->rootDse->get_value('dsServiceName');
+    my $dsServiceName = decode_utf8($ldb->rootDse->get_value('dsServiceName'));
 
     my $params = {
         base => "CN=Partitions,CN=Configuration,$basedn",
@@ -1156,7 +1155,7 @@ sub _addForestDnsZonesReplica
     my $entry = $result->entry(0);
     my @replicas = $entry->get_value('msDS-NC-Replica-Locations');
     foreach my $replica (@replicas) {
-        return if (lc $replica eq lc $dsServiceName);
+        return if (lc decode_utf8($replica) eq lc $dsServiceName);
     }
     $entry->add('msDS-NC-Replica-Locations' => [ $dsServiceName ]);
     $entry->update($ldb->connection());
@@ -1171,7 +1170,7 @@ sub _addDomainDnsZonesReplica
     my $sambaModule = EBox::Global->modInstance('samba');
     my $ldb = $sambaModule->ldb();
     my $basedn = $ldb->dn();
-    my $dsServiceName = $ldb->rootDse->get_value('dsServiceName');
+    my $dsServiceName = decode_utf8($ldb->rootDse->get_value('dsServiceName'));
 
     my $params = {
         base => "CN=Partitions,CN=Configuration,$basedn",
@@ -1187,7 +1186,7 @@ sub _addDomainDnsZonesReplica
     my $entry = $result->entry(0);
     my @replicas = $entry->get_value('msDS-NC-Replica-Locations');
     foreach my $replica (@replicas) {
-        return if (lc $replica eq lc $dsServiceName);
+        return if (lc decode_utf8($replica) eq lc $dsServiceName);
     }
     $entry->add('msDS-NC-Replica-Locations' => [ $dsServiceName ]);
     $entry->update($ldb->connection());
@@ -1216,7 +1215,7 @@ sub _waitForRidPoolAllocation
 
     # Get the server object, contained in the config NC, that represents
     # this DC
-    my $serverNameDN = $ldb->rootDse->get_value('serverName');
+    my $serverNameDN = decode_utf8($ldb->rootDse->get_value('serverName'));
     my $result = $ldb->search({
         base => $serverNameDN,
         scope => 'base',
@@ -1231,7 +1230,7 @@ sub _waitForRidPoolAllocation
     my $serverObject = $result->entry(0);
 
     # Get the domain controller object representing this DC
-    my $serverReferenceDN = $serverObject->get_value('serverReference');
+    my $serverReferenceDN = decode_utf8($serverObject->get_value('serverReference'));
     while (not $allocated and $maxTries > 0) {
         $result = $ldb->search({
             base => $serverReferenceDN,
@@ -1247,7 +1246,7 @@ sub _waitForRidPoolAllocation
         my $dcObject = $result->entry(0);
 
         # Get the list of references to RID set objects managing RID allocation
-        my @ridSetReferencesDNs = $dcObject->get_value('rIDSetReferences');
+        my @ridSetReferencesDNs = decode_utf8($dcObject->get_value('rIDSetReferences'));
         foreach my $ridSetReferenceDN (@ridSetReferencesDNs) {
             $result = $ldb->search({
                 base => $ridSetReferenceDN,
